run intellij code cleanup, tentatively depth